k8s/inventory/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: ecommerce
  labels:
    app: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: youssefar22/inventory:latest
          ports:
            - containerPort: 3001
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 3001
          resources:
            limits:
              memory: "100Mi"
            requests:
              memory: "100Mi"
              cpu: "50m"
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
