k8s/inventory/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: ecommerce
spec:
  selector:
    app: inventory
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
